# stacked-tomoscan-gen

./: CMakeLists.txt  README.md  config.py  gen_params.config  stacked_scan.py
demos/: bicycle_wheel.config  big_wheel.config  columns.config  cylinder.config  cylinder_of_bubbles.config  fibers.config  model_generator.ipynb  nonuniform.config  nonuniform_2.config  pores.config  pores_2.config  rotate.config  shepp-logan.config  small_wheel.config  spikes.config  spirals.config  spirals_horizontal.config  spirals_vertical.config
docs/: Doxyfile
docs/html/: Generator_8hpp_source.html  Parameters_8hpp_source.html  TomoP3DModel_8hpp_source.html  TomoP3DObject_8hpp_source.html  annotated.html  classGenerator-members.html  classGenerator.html  classParameters-members.html  classParameters.html  classTomoP3DModel-members.html  classTomoP3DModel.html  classTomoP3DObject-members.html  classTomoP3DObject.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_func.html  graph_legend.html  index.html
docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  searchdata.js
src/: CMakeLists.txt  Generator.cpp  Generator.hpp  Parameters.cpp  Parameters.hpp  TomoP3DModel.cpp  TomoP3DModel.hpp  TomoP3DObject.cpp  TomoP3DObject.hpp  main.cpp  model_viewer.cpp  reconstructor.py
